July 2024
RISC-V filter. v0.13 format for delta filter.

July 2023
ZSTD and new filtering code ARM64

February 2023
Show comment or not depending on magic byte 19.

January 2023
Add BZIP3 recognition. v0.10 format header.

June 2022
Handle version 0.9 magic header. Show Compression Levels and
comments.

December 2021
Some printf() output formatting. Add Thousands separator.

November 2021

If no option, just show info for filename.

July 2021

Added lrzip-next version 0.8 support with new magic header.
Added ability to display lrzip-next 0.7.x+ filter method and/or Delta offset.