@@ -1,3 +1,6 @@
+February 2025
+Add Cost factor display for encryption. v0.14
+
 July 2024
 RISC-V filter. v0.13 format for delta filter.
 
